# backend

./: .dockerignore  .env.example  .env.production.example  .gitignore  Dockerfile  docker-compose.dev.yml  docker-compose.yml  manage.py  pyproject.toml
.github/workflows/: deploy.yml
apps/: __init__.py  api_router.py
apps/ai/: admin.py  llm.py  models.py  services.py  tests.py
apps/ai/api/: urls.py  views.py
apps/ai/migrations/: 0001_initial.py  0002_initial.py
apps/catalog/: admin.py  models.py  services.py  tests.py
apps/catalog/api/: serializers.py  urls.py  views.py
apps/catalog/migrations/: 0001_initial.py
apps/commerce/: admin.py  models.py  services.py  tests.py
apps/commerce/api/: __init__.py  serializers.py  urls.py  views.py
apps/commerce/migrations/: 0001_initial.py
apps/communications/: admin.py  consumers.py  events.py  models.py  routing.py  services.py  tests.py  ws_auth.py
apps/communications/api/: __init__.py  serializers.py  (+2 more)
apps/companies/: admin.py  models.py
apps/content/: admin.py  models.py  services.py
apps/innovation/: admin.py  models.py  services.py  tests.py
apps/notifications/: admin.py  models.py  services.py  tests.py
apps/operations/: admin.py  models.py  services.py  test_seed.py  tests.py
apps/support/: admin.py  models.py  services.py  tests.py
apps/users/: admin.py  models.py  permissions.py  services.py  tests.py
core/: api.py  asgi.py  tests.py  urls.py  utils.py  wsgi.py
core/settings/: __init__.py  base.py  dev.py  prod.py  staging.py  test.py
docker/: entrypoint.sh
nginx/: default.conf
(+43 files in other folders)
