[project]
name = "konglomerat-backend"
version = "0.1.0"
description = "Django REST backend for Konglomerat."
requires-python = "==3.14.5"
dependencies = [
    "channels>=4.0,<5",
    "channels-redis>=4.2,<5",
    "daphne>=4.1,<5",
    "django==6.0.6",
    "djangorestframework>=3.16,<4",
    "djangorestframework-simplejwt>=5.5,<6",
    "django-cors-headers>=4.7,<5",
    "django-filter>=25.1",
    "django-environ>=0.12,<1",
    "django-storages>=1.14,<2",
    "drf-spectacular>=0.28,<1",
    "gunicorn>=23.0,<24",
    "boto3>=1.34,<2",
    "psycopg[binary]>=3.2,<4",
    "pillow>=11.0,<12",
    "django-unfold==0.99.1",
    "google-genai>=2.14,<3",
]

[dependency-groups]
dev = [
    "pytest>=8.4,<9",
    "pytest-django>=4.11,<5",
    "ruff>=0.12,<1",
]

[tool.uv]
package = false

[tool.ruff]
target-version = "py314"
line-length = 100

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "core.settings.test"
python_files = ["tests.py", "test_*.py", "*_tests.py"]
